--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @use "default/def";
 @use "fonts/fonts";
+@use "elements/inner";
 @use "elements/header";
 @use "elements/footer";
 @use "elements/blackoutBlock";
@@ -17,3 +18,7 @@
 @use "elements/game_card/editions";
 @use "elements/game_card/information";
 @use "elements/game_card/similar";
+@use "elements/profile/profile";
+@use "elements/profile/settings";
+@use "elements/profile/more";
+@use "elements/profile/purchase";
