--- a/scss/elements/_blockButtonMore.scss
+++ b/scss/elements/_blockButtonMore.scss
@@ -12,7 +12,7 @@
             padding: 12px 12px 12px 16px;
             border-radius: 25px;
             background-color: rgba(255, 255, 255, .05);
-            @include base.style-glass_hover;
+            @include base.style-main_click;
             transition: .2s;
             & > span {
                 display: block;
