--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -3,9 +3,9 @@
 .header {
     position: fixed;
     z-index: 50;
-    top: 8px;
-    right: 8px;
-    left: 8px;
+    top: 0px;
+    right: 0px;
+    left: 0px;
     display: flex;
     justify-content: space-between;
     padding: 15px;
@@ -16,162 +16,11 @@
         right: 0;
         left: 0;
         z-index: 1;
-        border-radius: 25px;
-        background-color: rgba(56, 56, 56, 0.5);
-        // -webkit-backdrop-filter: blur(10px);
-        // backdrop-filter: blur(10px);
-        // border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-        // box-shadow: 0 0 40px -2px rgba(0, 0, 0, 0.5);
-        // background-color: rgba(255, 255, 255, .1);
-        @include base.style-glass;
+
+        @include base.style-main_base;
         opacity: 0;
         transition: 0.5s;
         overflow: hidden;
-        &__top {
-            padding-top: 1px;
-            height: 39px;
-            & > div {
-                width: 100%;
-                height: 2px;
-                // background-color: rgba(255, 255, 255, .05);
-                -webkit-backdrop-filter: blur(70px);
-                backdrop-filter: blur(70px);
-                &:nth-child(20) {
-                    opacity: 0;
-                }
-                &:nth-child(19) {
-                    opacity: .1;
-                }
-                &:nth-child(18) {
-                    opacity: .15;
-                }
-                &:nth-child(17) {
-                    opacity: .2;
-                }
-                &:nth-child(16) {
-                    opacity: .25;
-                }
-                &:nth-child(15) {
-                    opacity: .3;
-                }
-                &:nth-child(14) {
-                    opacity: .35;
-                }
-                &:nth-child(13) {
-                    opacity: .4;
-                }
-                &:nth-child(12) {
-                    opacity: .45;
-                }
-                &:nth-child(11) {
-                    opacity: .5;
-                }
-                &:nth-child(10) {
-                    opacity: .55;
-                }
-                &:nth-child(9) {
-                    opacity: .6;
-                }
-                &:nth-child(8) {
-                    opacity: .65;
-                }
-                &:nth-child(7) {
-                    opacity: .7;
-                }
-                &:nth-child(6) {
-                    opacity: .75;
-                }
-                &:nth-child(5) {
-                    opacity: .8;
-                }
-                &:nth-child(4) {
-                    opacity: .85;
-                }
-                &:nth-child(3) {
-                    opacity: .9;
-                }
-                &:nth-child(2) {
-                    opacity: .95;
-                }
-                &:nth-child(1) {
-                    opacity: 1;
-                }
-            }
-        }
-        &__center {
-            height: 0px;
-        }
-        &__bottom {
-            padding-bottom: 1px;
-            height: 39px;
-            & > div {
-                width: 100%;
-                height: 2px;
-                background-color: rgba(255, 255, 255, .05);
-                -webkit-backdrop-filter: blur(70px);
-                backdrop-filter: blur(70px);
-                &:nth-child(1) {
-                    opacity: .1;
-                }
-                &:nth-child(2) {
-                    opacity: .1;
-                }
-                &:nth-child(3) {
-                    opacity: .15;
-                }
-                &:nth-child(4) {
-                    opacity: .2;
-                }
-                &:nth-child(5) {
-                    opacity: .25;
-                }
-                &:nth-child(6) {
-                    opacity: .3;
-                }
-                &:nth-child(7) {
-                    opacity: .35;
-                }
-                &:nth-child(8) {
-                    opacity: .4;
-                }
-                &:nth-child(9) {
-                    opacity: .45;
-                }
-                &:nth-child(10) {
-                    opacity: .5;
-                }
-                &:nth-child(11) {
-                    opacity: .55;
-                }
-                &:nth-child(12) {
-                    opacity: .6;
-                }
-                &:nth-child(13) {
-                    opacity: .65;
-                }
-                &:nth-child(14) {
-                    opacity: .7;
-                }
-                &:nth-child(15) {
-                    opacity: .75;
-                }
-                &:nth-child(16) {
-                    opacity: .8;
-                }
-                &:nth-child(17) {
-                    opacity: .85;
-                }
-                &:nth-child(18) {
-                    opacity: .9;
-                }
-                &:nth-child(19) {
-                    opacity: .95;
-                }
-                &:nth-child(20) {
-                    opacity: 1;
-                }
-            }
-        }
     }
     &__left {
         width: 100%;
@@ -245,7 +94,7 @@
             // &:hover {
             //     background-color: rgba(186, 186, 186, 70%);
             // }
-            @include base.style-glass_hover;
+            @include base.style-main_mouse;
             &:focus {
                 //! background-color: rgba(186, 186, 186, .7);
                 background-color: rgba(255, 255, 255, .2);
@@ -296,7 +145,7 @@
         transition: 0.15s;
         cursor: pointer;
         margin-right: 10px;
-        @include base.style-glass_hover;
+        @include base.style-main_click;
         // &:hover {
         //     background-color: base.$clr-blue_light;
         // }
@@ -304,9 +153,9 @@
             transform: scale(.95);
         }
         &_active {
-            @include base.style-glass_active;
+            @include base.style-main_active;
             &:hover {
-                @include base.style-glass_active;
+                @include base.style-main_active;
             }
         }
     }
@@ -329,8 +178,8 @@
             // border: 1px solid rgba(186, 186, 186, 0.6);
             transition: 0.15s;
             cursor: pointer;
-            background-color: rgba(255, 255, 255, .1);
-            @include base.style-glass_hover;
+            // background-color: rgba(255, 255, 255, .1);
+            @include base.style-main_click;
             & > img {
                 width: 100%;
                 filter: invert(1);
@@ -364,8 +213,6 @@
         // -webkit-backdrop-filter: blur(30px);
         // backdrop-filter: blur(30px);
         background-color: rgba(56, 56, 56, 0.8);
-        -webkit-backdrop-filter: blur(5px);
-        backdrop-filter: blur(5px);
         transition: 0.15s;
         box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
         // border: 1px solid rgba(255, 255, 255, 0.2);
@@ -373,7 +220,7 @@
 
         opacity: 1;
         transform: translateY(0px);
-        @include base.style-glass;
+        @include base.style-main_base;
         &__head {
             border-radius: 10px;
             // background: rgba(16, 16, 16, 0.30);
@@ -384,7 +231,7 @@
             // gap: 1px;
             padding: 10px;
             cursor: pointer;
-            @include base.style-glass;
+            @include base.style-main_click;
             & > svg {
                 width: 20px;
                 opacity: 0.5;
@@ -410,26 +257,17 @@
             margin-bottom: 10px;
             &__nav {
                 border-radius: 10px;
-                // background: rgba(16, 16, 16, 0.30);
-                background: rgba(255, 255, 255, 0.05);
                 font-family: base.$fnt-all;
                 font-size: 14px;
                 padding: 7px;
                 display: flex;
                 align-items: center;
-                border: 1px solid rgba(255, 255, 255, 0);
                 cursor: pointer;
                 transition: 0.15s;
                 & img {
                     margin-right: 7px;
                 }
-                // &:hover {
-                //     border: 1px solid rgba(255, 255, 255, 0.5);
-                // }
-                &:active {
-                    transform: scale(0.97);
-                }
-                @include base.style-glass_hover;
+                @include base.style-main_click;
             }
         }
         &_hidden {
