--- a/scss/elements/game_card/_editions.scss
+++ b/scss/elements/game_card/_editions.scss
@@ -45,8 +45,8 @@
                 margin-top: -45px;
                 border-radius: 15px;
                 padding: 5px 7px 7px 12px;
-                @include base.style-glass;
-                background-color: rgba(255, 255, 255, .05);
+                @include base.style-main;
+                // background-color: rgba(255, 255, 255, .05);
                 -webkit-backdrop-filter: blur(5px);
                 backdrop-filter: blur(5px);
                 transition: .2s;
@@ -88,14 +88,10 @@
                         align-items: center;
                         justify-content: center;
                         cursor: pointer;
-                        @include base.style-glass;
-                        background-color: rgba(255, 255, 255, .05);
+                        @include base.style-percentBlock;
                         font-size: 16px;
                         font-weight: 600;
                         transform: translateY(-1px);
-                        &_active {
-                            border: 2px solid base.$clr-blue_light;
-                        }
                     }
                 }
                 // &__percent {
@@ -144,7 +140,7 @@
                 & * {
                     cursor: default;
                 }
-                @include base.style-glass_active;
+                @include base.style-main_active;
             }
             &_active:hover &{
                 &__imgBlock  {
