--- a/scss/elements/game_card/_miniGameCard.scss
+++ b/scss/elements/game_card/_miniGameCard.scss
@@ -58,21 +58,22 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: 7px;
-            background-color: rgb(67, 67, 67);
+            border-radius: 10px;
+            // background-color: rgb(67, 67, 67);
             cursor: pointer;
             transition: 0.15s;
+            @include base.style-main_click;
             & img {
                 height: 26px;
                 filter: invert(1);
             }
-            &:hover {
-                transform: scale(0.98);
-                background-color: rgb(60, 60, 60);
-            }
-            &:active {
-                transform: scale(0.95);
-            }
+            // &:hover {
+            //     transform: scale(0.98);
+            //     background-color: rgb(60, 60, 60);
+            // }
+            // &:active {
+            //     transform: scale(0.95);
+            // }
             &_active {
                 background: base.$clr-grad_blue_100;
                 border: 0px solid transparent;
@@ -86,36 +87,21 @@
             }
         }
         &__buttonBuy {
-            position: relative;
             height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: 7px;
-            background: base.$clr-grad_blue_100;
+            border-radius: 10px;
             overflow: hidden;
-            cursor: pointer;
-            transition: 0.15s;
             padding-left: 20px;
             padding-right: 20px;
-            &__text {
+            @include base.style-primaryBTN;
+            & .-text {
                 position: relative;
-                z-index: 2;
+                z-index: 3;
                 font-size: 18px;
                 font-weight: 500;
                 cursor: pointer;
-            }
-            &__forHover {
-                z-index: 1;
-                opacity: 0;
-                background: base.$clr-blue_light;
-                transition: 0.15s;
-            }
-            &:hover &__forHover{
-                opacity: 1;
-            }
-            &:active {
-                transform: scale(0.98);
             }
         }
     }
