--- a/css/main.css
+++ b/css/main.css
@@ -1845,11 +1845,11 @@ label {
 .mainInfo__info__title {
   font-size: 30px;
   font-weight: 600;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .mainInfo__info__category {
   display: flex;
-  gap: 10px;
+  gap: 7px;
   flex-wrap: wrap;
 }
 .mainInfo__info__category__nav {
@@ -1896,6 +1896,20 @@ label {
 .mainInfo__info__category__nav:hover {
   z-index: 5;
   border: 2px solid rgba(255, 255, 255, 0.2);
+}
+.mainInfo__info__category__point {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  border-radius: 13px;
+  padding: 3px 10px;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+}
+.mainInfo__info__category__point > span {
+  color: rgb(200, 200, 200);
+  margin-right: 5px;
 }
 .mainInfo__info__interactions {
   margin-top: 20px;
@@ -2409,10 +2423,10 @@ label {
   transform: scale(0.95);
 }
 .profile__avatar {
-  width: 100px;
-  height: 100px;
+  width: 85px;
+  height: 85px;
   overflow: hidden;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 .profile__avatar > img {
   width: 100%;
@@ -2470,6 +2484,8 @@ label {
 }
 
 .settings {
+  position: relative;
+  z-index: 3;
   background-color: rgba(50, 50, 50, 0.75);
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
@@ -2477,7 +2493,7 @@ label {
   backdrop-filter: blur(10px);
   padding: 20px;
   border-radius: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 .settings > form {
   width: 100%;
@@ -2551,6 +2567,8 @@ label {
   z-index: 3;
 }
 .settings__conf__regionInput__regions__header {
+  position: relative;
+  z-index: 2;
   height: 50px;
   cursor: pointer;
   background-color: transparent;
@@ -2564,16 +2582,47 @@ label {
 .settings__conf__regionInput__regions__header > svg {
   height: 24px;
   transform: rotate(90deg);
+  transition: 0.2s;
 }
 .settings__conf__regionInput__regions__header:hover {
   background-color: rgba(255, 255, 255, 0.07);
 }
 .settings__conf__regionInput__regions__list {
+  position: relative;
+  z-index: 1;
   display: none;
+  flex-direction: column;
   width: 100%;
+  border-radius: 0px 0px 15px 15px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  background-color: #444;
+  border-top: none;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 7px;
+  padding-left: 7px;
+  animation: open 0.25s cubic-bezier(0, 0, 0, 0.75) 1;
+}
+.settings__conf__regionInput__regions__list__region {
+  padding-left: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.settings__conf__regionInput__regions__list__region:hover {
+  background-color: #555;
 }
 .settings__conf__regionInput_open .settings__conf__regionInput__regions__header {
   border-radius: 15px 15px 0px 0px;
+}
+.settings__conf__regionInput_open .settings__conf__regionInput__regions__header > svg {
+  transform: rotate(270deg);
+}
+.settings__conf__regionInput_open .settings__conf__regionInput__regions__list {
+  display: flex;
 }
 .settings__conf__regionInput_open input {
   border-radius: 15px 15px 0px 0px;
@@ -2640,7 +2689,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: start;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   gap: 10px;
 }
 .more__header__nav {
@@ -2685,6 +2734,8 @@ label {
 }
 
 .purchase {
+  position: relative;
+  z-index: 1;
   margin-bottom: 30px;
 }
 .purchase__header {
@@ -2865,7 +2916,7 @@ label {
 .purchase__gamelist__game__info {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 50px;
   padding-left: 20px;
 }
 .purchase__gamelist__game__info__point__title {
